Revert "update modules"

--- a/mod-randomenchants/.travis.yml
+++ b/mod-randomenchants/.travis.yml
@@ -1,5 +1,6 @@
 sudo: required
-dist: bionic # (18.04)
+dist: xenial # (16.04)
+# bionic (18.04) is not yet available in travis
 
 language: cpp
 
@@ -47,7 +48,7 @@ jobs:
         - source ./apps/ci/ci-import-db.sh
       script:
         - source ./apps/ci/ci-compile.sh
-      #  - source ./apps/ci/ci-worldserver-dry-run.sh
+        - source ./apps/ci/ci-worldserver-dry-run.sh
 
     - stage: prepare_cache
       env: TRAVIS_BUILD_ID="2"
